--- a/html/styles.scss
+++ b/html/styles.scss
@@ -27,11 +27,11 @@ $green:   #118230 !default;
 $teal:    #20c997 !default;
 $cyan:    #3093CF !default;
 
-$primary:   $orange!default;
+$primary:   $old-orange!default;
 $secondary: $gray-700 !default;
 $success:   $green !default;
 $info:      $cyan !default;
-$warning:   $orange !default;
+$warning:   $old-orange !default;
 $danger:    $red !default;
 $light:     $gray-400 !default;
 $dark:      $black !default;
@@ -40,9 +40,9 @@ $dark:      $black !default;
 $--bs-navbar-color: #fff !default;
 
 // Links
-$link-color: $orange !default;
+$link-color: $old-orange !default;
 $link-decoration: none !default;
-$link-hover-color: $orange !default;
+$link-hover-color: $old-orange !default;
 $link-hover-decoration: underline !default;
 
 // Footer
@@ -196,7 +196,7 @@ pre.text, pre.sourceCode, .cell-output pre {
 #title-block-header.quarto-title-block.default .code-tools-button p::before,
 #title-block-header.quarto-title-block.default .code-tools-button i::before
 {
-  color: $orange;
+  color: $old-orange;
 }
 
 #quarto-content>* {
@@ -322,5 +322,5 @@ pre.text, pre.sourceCode, .cell-output pre {
 }
 
 #news p a{
-  color: $orange;
+  color: $old-orange;
 }
